[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Rahul D. Ghosal <rdghosal@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
reqwest = "0.11"
